--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -6,5 +6,14 @@
     <string name="signUp">注册新账户</string>
     <string name="login">登陆</string>
     <string name="rememberPw">记住密码</string>
-    <string name="welcomeMsg">Thanks for Signing up!</string>
+    <string name="welcomeMsg">谢谢您的加入!</string>
+    <string name="backHomeBtn">返回登陆页面</string>
+    <string name="country_selection">选择国家</string>
+    <string name="newUserCheck"> 我是新用户</string>
+
+
+    <string name="china">中国</string>
+    <string name="india">印度</string>
+    <string name="usa">美国</string>
+    <string name="uk">英国</string>
 </resources>
